try fixing ios jump

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,6 @@ Elaine Zhou, Harrison Wray, Brian Lam, Aaron Holden
 		width: 100%;
 		margin:0px; 
 		padding:0px;
-		min-width: 1024px;
 	}
 
 	.content{
